# sovereign-truth-engine

./: .gitignore  Cargo.toml  JOURNEY.md  LICENSE  POSTMORTEM.md  README.md
docs/: ARCHITECTURE.md  OPERATIONS.md  struggles.md
src/: archive.rs  lib.rs  mmap_cache_entry.rs  mmap_did_cache.rs  monitor.rs  pds_ledger.rs  resolver.rs  verify.rs
src/mst/: builder.rs  car.rs  mod.rs  visualize.rs
src/parser/: canonical.rs  core.rs
tests/: VERIFICATION_PLAN.md  bench_cache.rs  final_audit.rs  test_archive_dictionary.rs  test_cache_vs_plc_api.rs  test_compression.rs  test_v2_2_features.rs  tests.rs
